[gd_scene load_steps=9 format=3 uid="uid://clp7yaft1xlcf"]

[ext_resource type="PackedScene" uid="uid://dk05c7nyye6kr" path="res://scenes/ship.tscn" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://bfke7lmm65w8q" path="res://scripts/world.gd" id="1_fj7yv"]
[ext_resource type="PackedScene" uid="uid://balbsvsrb5duq" path="res://effects/background.tscn" id="4_aqk2v"]
[ext_resource type="PackedScene" uid="uid://kvd3humfuu3u" path="res://scenes/enemy_3.tscn" id="4_dwbse"]
[ext_resource type="PackedScene" uid="uid://bmljgoym5wm1v" path="res://HUD/powerupUI.tscn" id="5_4mrxx"]
[ext_resource type="PackedScene" uid="uid://csadf3vp02rp0" path="res://scenes/enemy_1.tscn" id="5_036b0"]
[ext_resource type="PackedScene" uid="uid://c3iykuupaco8j" path="res://scenes/enemy_2.tscn" id="5_dwbse"]
[ext_resource type="PackedScene" uid="uid://cssu32ybsk7qm" path="res://HUD/hud.tscn" id="5_i7141"]

[node name="world" type="Node2D"]
script = ExtResource("1_fj7yv")
enemy_scenes = Array[PackedScene]([ExtResource("5_036b0"), ExtResource("5_dwbse"), ExtResource("4_dwbse")])

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[node name="PlayerSpawnPosition" type="Marker2D" parent="."]
position = Vector2(384, 910)

[node name="LaserContainer" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PowerUpUI" parent="CanvasLayer" instance=ExtResource("5_4mrxx")]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("5_i7141")]
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 1.0

[node name="Ship" parent="." instance=ExtResource("1_f3sb7")]
z_index = 100
position = Vector2(384, 912)

[node name="SpaceBackground" parent="." instance=ExtResource("4_aqk2v")]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
